--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>spring-jenkins-docker-integration</finalName>
 	</build>
 
 </project>
